# gios

./: LICENSE  README.md  mkdocs.yml  package.xml
docs/: README.md  index.md  usage.md
gios/: CMakeLists.txt  package.xml
gios/include/gios/: acado.h  gios.h
gios/src/include/gios/: acado.h  gios.h
gios/src/source/: gios.cpp
gios/tests/: test_acado.cpp
gios/tests/solvers/acado/: acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
gios/tests/solvers/drone_mpc_full_generated/: Makefile  Makefile_old  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c  test_old.cpp  test_old_2.cpp
gios_common/: CMakeLists.txt  package.xml
gios_common/src/include/gios_common/: gios_common.h
gios_common/src/source/: gios_common.cpp
gios_solvers/gios_acado/: CMakeLists.txt  package.xml
gios_solvers/gios_acado/src/include/gios_acado/: gios_acado.h
gios_solvers/gios_acado/src/source/: gios_acado.cpp
include/gios/: gios.h
src/: gios.cpp
tests/: test_acado.cpp
tests/solvers/acado/: acado_common.h
tests/solvers/drone_mpc_full_generated/: acado_common.h  acado_qpoases_interface.cpp  drone_mpc_acado.cpp  drone_mpc_acado.h  drone_mpc_controller_node.cpp  drone_mpc_solver.h  test.cpp
