<?xml version="1.0"?>
<package format="2">
  <name>gios</name>
  <version>0.0.0</version>
  <description>The gios package</description>

  <maintainer email="manu@todo.todo">manu</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rosunit</test_depend>

  <export>

  </export>
</package>
