<?xml version="1.0"?>
<package format="2">
  <name>gios</name>
  <version>1.0.0</version>
  <description>
GIOS is a Generalistic Interface for Optimization Solvers. Is written in C++ and allows you to interact with your solver's generated code using your own data structures and a standardized interface. With GIOS, you can select the solver to use and switch between them without changing your code. Is written in C++ and, since it links the data without storing it, is very lightweight and suitable for embedded applications like Model Predictive Control (MPC).
  </description>

  <maintainer email="manucalop@gmail.com">Manuel Castillo-Lopez</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rosunit</test_depend>

  <export>

  </export>
</package>
