<?xml version="1.0"?>
<package format="2">
  <name>gios_common</name>
  <version>0.0.0</version>
  <description>The gios_common package</description>

  <maintainer email="manu@todo.todo">manu</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
